# modules/admin.js
@@ -6,6 +6,7 @@ const {detailOrder} = require('../controllers/orders/detailOrder')
 const {allOrders} = require('../controllers/admin/allOrders')
 const {updateStatus} = require('../controllers/admin/updateStatus')
 const {updateRol} = require('../controllers/admin/updateRol')
+const {removeOrder} = require('../controllers/admin/removeOrder')
 const middleware = require('../middlewares/middle_admin');
 
 
@@ -15,6 +16,7 @@ router.get('/detailOrder', detailOrder)
 router.get('/allOrders', allOrders)
 router.put('/updateStatus', updateStatus)
 router.put('/updateRol', middleware.validateFields, middleware.validateId, updateRol)
+router.delete('/removeOrder', middleware.validateOrderId, removeOrder)
 
 
 
